Added reading related apis
